--- a/path-of-yoga-light/classes.html
+++ b/path-of-yoga-light/classes.html
@@ -1,82 +1,97 @@
 <!DOCTYPE html>
 <!-- Jacob Quirk -->
 <html lang="en">
+
 <head>
 	<title>
 		Path Of Light Yoga Studio :: Classes
 	</title>
-	<meta charset = "utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="yoga.css">
 </head>
+
 <body>
 	<div id="wrapper">
-	<header>
-		<h1>
-			Path of Light Yoga Studio
-		</h1>
-	</header>
-	<nav>
-		<ul>
-			<li>			
-				<a href="index.html">
+		<header>
+			<h1>
+				Path of Light Yoga Studio
+			</h1>
+		</header>
+		<nav>
+			<ul>
+				<li>
+					<a href="index.html">
 					Home
-				</a> 
-			</li>
-			<li>
-				<a href = "classes.html">
+				</a>
+				</li>
+				<li>
+					<a href="classes.html">
 					Classes
-				</a> 
-			</li>
-			<li>
-				<a href = "schedule.html">
+				</a>
+				</li>
+				<li>
+					<a href="schedule.html">
 					Schedule
-				</a> 
-			</li>
-			<li>
-				<a href = "contact.html">
+				</a>
+				</li>
+				<li>
+					<a href="contact.html">
 					Contact
 				</a>
-			</li>
-		</ul>
-	</nav>
-	<main>
-		<div id="hero">
-			<img src="pictures/yogamat.jpg" alt="Yoga Mat to put your butt">
-		</div>
-		<h2> Yoga Classes </h2>
-		<dl>
-			<dt>
-				Gentle Hartha Yoga
-			</dt>
-			<dd>
-				Intended for beginners and anyone wishing a grounded foundation in the practice of yoga, this 60 minute class of poses and slow movement focuses on asana (proper alignment and posture), pranayama(breath work), and guided meditation to foster your mind and body connection.
-			</dd>
-			<dt>
-				Vinyasa Yoga
-			</dt>
-			<dd>
-				Although designed for intermediate and advanced students, beginners are welcome to sample this 60 minute class that focuses on breath-synchronized movement-- you will inhale and exhale as you flow energenically through poses.
-			</dd>
-			<dt>
-				Restorative Yoga
-			</dt>
-			<dd>
-				This 90 minute class features very slow movement and long poses that are supported by a chair or wall. This calming, restorative experience is suitable for students of any level of experience. This practice can be a perfect way to help rehabilitate an injury.
-			</dd>
-		</dl>
-		<h2>
-			Relax Anytime with Savasana
-		</h2>
-		<p>
-			Prepare youself for Savasana. Lie down on your mat with your arms at your side with palms up. Close your eyes and breathe slowly but deeply. Sink into the mat and let your worries slip away. When you are ready, roll on your side and use your arms to push yourself to a sitting position with crossed legs. Place your hands in a prayer position. Be grateful for all you have in life. Namaste.
-		</p>
-		<audio controls="controls">
-			<source src="audio/savasana.mp3" type="audio/mpeg">
-			<source src="audio/savasana.ogg" type="audio/ogg">
-		</audio>
-	</main>
-	<footer>
+				</li>
+				<li>
+					<a href="store.html">
+						Store
+					</a>
+				</li>
+			</ul>
+		</nav>
+		<main>
+			<div id="hero">
+				<img src="pictures/yogamat.jpg" alt="Yoga Mat to put your butt">
+			</div>
+			<h2> Yoga Classes </h2>
+			<dl>
+				<dt>
+					Gentle Hartha Yoga
+				</dt>
+				<dd>
+					Intended for beginners and anyone wishing a grounded foundation in the practice of yoga, this 60 minute class of poses and
+					slow movement focuses on asana (proper alignment and posture), pranayama(breath work), and guided meditation to foster
+					your mind and body connection.
+				</dd>
+				<dt>
+					Vinyasa Yoga
+				</dt>
+				<dd>
+					Although designed for intermediate and advanced students, beginners are welcome to sample this 60 minute class that focuses
+					on breath-synchronized movement-- you will inhale and exhale as you flow energenically through poses.
+				</dd>
+				<dt>
+					Restorative Yoga
+				</dt>
+				<dd>
+					This 90 minute class features very slow movement and long poses that are supported by a chair or wall. This calming, restorative
+					experience is suitable for students of any level of experience. This practice can be a perfect way to help rehabilitate
+					an injury.
+				</dd>
+			</dl>
+			<h2>
+				Relax Anytime with Savasana
+			</h2>
+			<p>
+				Prepare youself for Savasana. Lie down on your mat with your arms at your side with palms up. Close your eyes and breathe
+				slowly but deeply. Sink into the mat and let your worries slip away. When you are ready, roll on your side and use your
+				arms to push yourself to a sitting position with crossed legs. Place your hands in a prayer position. Be grateful for
+				all you have in life. Namaste.
+			</p>
+			<audio controls="controls">
+				<source src="audio/savasana.mp3" type="audio/mpeg">
+				<source src="audio/savasana.ogg" type="audio/ogg">
+			</audio>
+		</main>
+		<footer>
 			<small>
 				<i>
 					Copyright &copy; 2016 Path Of Light Yoga <br> 
@@ -88,4 +103,5 @@
 		</footer>
 	</div>
 </body>
+
 </html>
