--- a/path-of-yoga-light/contact.html
+++ b/path-of-yoga-light/contact.html
@@ -43,6 +43,11 @@
 						Contact
 					</a>
                 </li>
+                <li>
+                    <a href="store.html">
+						Store
+					</a>
+                </li>
             </ul>
         </nav>
         <main>
