--- a/path-of-yoga-light/index.html
+++ b/path-of-yoga-light/index.html
@@ -41,6 +41,11 @@
 						Contact
 					</a>
 				</li>
+				<li>
+					<a href = "store.html">
+						Store
+					</a>
+				</li>
 			</ul>
 		</nav>
 		<main>
