--- a/path-of-yoga-light/schedule.html
+++ b/path-of-yoga-light/schedule.html
@@ -23,22 +23,27 @@
 				<li>
 					<a href="index.html">
 					Home
-				</a>
+					</a>
 				</li>
 				<li>
 					<a href="classes.html">
 					Classes
-				</a>
+					</a>
 				</li>
 				<li>
 					<a href="schedule.html">
 					Schedule
-				</a>
+					</a>
 				</li>
 				<li>
 					<a href="contact.html">
 					Contact
-				</a>
+					</a>
+				</li>
+				<li>
+					<a href="store.html">
+						Store
+					</a>
 				</li>
 			</ul>
 		</nav>
