--- a/path-of-yoga-light/store.html
+++ b/path-of-yoga-light/store.html
@@ -77,7 +77,7 @@
                 <p>
                     The Lotus Yoga Set includes a sustainable yoga mat and a 100% cotton yoga blanket. $39.99
                 </p>
-                <form method="post" action="http://www.webfoundations.net/scripts/cart.asp">
+                <form method="post" action="http://www.webdevfoundations.net/scripts/cart.asp">
                     <input type="hidden" name="desc2" id="desc2" value="Lotus Yoga Set">
                     <input type="hidden" name="cost2" id="cost2" value="39.99">
                     <input type="submit" value="Place in Cart">
