--- a/path-of-yoga-light/store.html
+++ b/path-of-yoga-light/store.html
@@ -64,7 +64,7 @@
                 <p>
                     The Namaste Yoga Set includes a sustainable yoga mat, a 100% cotton yoga blanket, and two eco-friendly yoga blocks. $49.99
                 </p>
-                <form method="post" action="http://www.webfoundations.net/scripts/cart.asp">
+                <form method="post" action="http://www.webdevfoundations.net/scripts/cart.asp">
                     <input type="hidden" name="desc1" id="desc1" value="Namaste Yoga Set">
                     <input type="hidden" name="cost1" id="cost1" value="49.99">
                     <input type="submit" value="Place in Cart">
