IM WORKING ON IT

--- a/Project2Quirk/about.html
+++ b/Project2Quirk/about.html
@@ -54,26 +54,40 @@
     <nav class="qborder">
         <ul>
             <li>
-                <a href="index.html">Home</a>
+                <a>Page 1</a>
             </li>
             <li>
-                <a href="csharpintro.html">C# Intro</a>
+                <a>Page 2</a>
             </li>
             <li>
-                <a href="monogame.html">Monogame</a>
+                <a>Page 3</a>
             </li>
             <li>
-                <a href="gamedesign.html">Game Design</a>
+                <a>Page 4</a>
             </li>
             <li>
-                <a href="about.html">About Us</a>
+                <a>Page 5</a>
+            </li>
+            <li>
+                <a>Page 6</a>
+            </li>
+            <li>
+                <a>Page 7</a>
+            </li>
+            <li>
+                <a>Page 8</a>
+            </li>
+            <li>
+                <a>Page 9</a>
             </li>
         </ul>
     </nav>
     <main class="qcontent qborder">
-        <p>
-            This is the main page for the website. I will update and post tutorial links here that you can visit.
-        </p>
+        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
+        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
+        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
+        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
+        <br>
     </main>
     <footer>
         <small>
