--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <div>
             <a href="path-of-yoga-light/index.html">Path-Of-Yoga-Light</a>
+            <a href="Project1/index.html">Project1</a>
             <a href="Project2Quirk/index.html">Project2</a>
         </div>
     </main>
