--- a/Project2Quirk/csharpintro.html
+++ b/Project2Quirk/csharpintro.html
@@ -33,7 +33,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-- My stuff -->
     <title>
-        QCoding :: MainPage
+        QCoding :: CSharpIntro
     </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="qcodingmain.css">
@@ -44,10 +44,10 @@
         <div class="qheaderbox">
             <img class="qicon" src="QIcon.png">
             <h1>
-                Welcome To QCoding!
+                C# Tutorial
             </h1>
             <h3>
-                My place for coding tutorials!
+                C# Section for the website
             </h3>
         </div>
     </header>
@@ -72,8 +72,32 @@
     </nav>
     <main class="qcontent qborder">
         <p>
-            This is the main page for the website. I will update and post tutorial links here that you can visit.
+            C# is a great language to learn! We will start of this tutorial series small, but build up into many cool topics! This series
+            will help you setup and <a href="https://www.visualstudio.com/thank-you-downloading-visual-studio/?sku=Community&rel=15">install visual studio 2017</a>,
+            and create a small basic game!
         </p>
+        <img class="qimg" src="pictures/visualstudio.png">
+        <p>
+            The first thing we need to do is install visual studio 2017. This is called an IDE (Integrated Development Environment).
+            This helps you build and create applications. You can however create programs without an IDE but for a newcomer,
+            it's recommened to use an IDE like visual. I will be using visual studio in all my diagrams to help you out.
+        </p>
+        <img class="qimg" src="pictures/file.png">
+        <p>
+            So the first thing we are going to do is make a new project in visual studio with the language C#. By going to File > New
+            Project > C# Console Application.
+        </p>
+        <img class="qimg" src="pictures/new proj.png">
+        <p>
+            Then give the project a good name like "Totally Awesome Tutorial!". Once you do that make sure you select Console Application under C# and just 
+            press Ok!
+        </p>
+        <img class="qimg" src="pictures/consoleProject.png">
+        <p>
+            This is what the default project will look like! We will go over all the parts of a simple program!
+            Don't worry about stuff like Framework version 4.7! We will go over all this stuff in other tutorials! Right now are just working on the basics!
+        </p>
+        <img class="qimg" src="pictures/main.png">
     </main>
     <footer>
         <small>
