--- a/Project2Quirk/gamedesign.html
+++ b/Project2Quirk/gamedesign.html
@@ -52,33 +52,21 @@
         </div>
     </header>
     <nav class="qborder">
-        <ul>
+       <ul>
             <li>
-                <a>Page 1</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
-                <a>Page 2</a>
+                <a href="csharpintro.html">C# Intro</a>
             </li>
             <li>
-                <a>Page 3</a>
+                <a href="monogame.html">Monogame</a>
             </li>
             <li>
-                <a>Page 4</a>
+                <a href="gamedesign.html">Game Design</a>
             </li>
             <li>
-                <a>Page 5</a>
-            </li>
-            <li>
-                <a>Page 6</a>
-            </li>
-            <li>
-                <a>Page 7</a>
-            </li>
-            <li>
-                <a>Page 8</a>
-            </li>
-            <li>
-                <a>Page 9</a>
+                <a href="about.html">About Us</a>
             </li>
         </ul>
     </nav>
