--- a/Project2Quirk/csharpintro.html
+++ b/Project2Quirk/csharpintro.html
@@ -89,15 +89,25 @@
         </p>
         <img class="qimg" src="pictures/new proj.png">
         <p>
-            Then give the project a good name like "Totally Awesome Tutorial!". Once you do that make sure you select Console Application under C# and just 
-            press Ok!
+            Then give the project a good name like "Totally Awesome Tutorial!". Once you do that make sure you select Console Application
+            under C# and just press Ok!
         </p>
         <img class="qimg" src="pictures/consoleProject.png">
         <p>
-            This is what the default project will look like! We will go over all the parts of a simple program!
-            Don't worry about stuff like Framework version 4.7! We will go over all this stuff in other tutorials! Right now are just working on the basics!
+            This is what the default project will look like! We will go over all the parts of a simple program! Don't worry about stuff
+            like Framework version 4.7! We will go over all this stuff in other tutorials! Right now are just working on
+            the basics!
         </p>
         <img class="qimg" src="pictures/main.png">
+        <p>
+            
+        </p>
+        <img class="qimg" src="pictures/top.png">
+        <img class="qimg" src="pictures/middle.png">
+        <img class="qimg" src="pictures/bottom.png">
+        <p>
+            <a href="https://pastebin.com/UvZksiBe">All the code together is available here!</a>
+        </p>
     </main>
     <footer>
         <small>
