--- a/Project2Quirk/csharpintro.html
+++ b/Project2Quirk/csharpintro.html
@@ -13,6 +13,7 @@
 -->
 
 <head>
+    <meta charset="utf-8">
     <!-- Favicon http://www.favicon-generator.org/ -->
     <link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
@@ -35,7 +36,6 @@
     <title>
         QCoding :: CSharpIntro
     </title>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="qcodingmain.css">
 </head>
 
@@ -76,35 +76,35 @@
             will help you setup and <a href="https://www.visualstudio.com/thank-you-downloading-visual-studio/?sku=Community&rel=15">install visual studio 2017</a>,
             and create a small basic game!
         </p>
-        <img class="qimg" src="pictures/visualstudio.png">
+        <img class="qimg" src="pictures/visualstudio.png" alt="Picture of visul studio 2017 when opened">
         <p>
             The first thing we need to do is install visual studio 2017. This is called an IDE (Integrated Development Environment).
             This helps you build and create applications. You can however create programs without an IDE but for a newcomer,
             it's recommened to use an IDE like visual. I will be using visual studio in all my diagrams to help you out.
         </p>
-        <img class="qimg" src="pictures/file.png">
+        <img class="qimg" src="pictures/file.png" alt="File > New for a new project">
         <p>
             So the first thing we are going to do is make a new project in visual studio with the language C#. By going to File > New
             Project > C# Console Application.
         </p>
-        <img class="qimg" src="pictures/new proj.png">
+        <img class="qimg" src="pictures/new proj.png" alt="Select Project... to open the window for a new project">
         <p>
             Then give the project a good name like "Totally Awesome Tutorial!". Once you do that make sure you select Console Application
             under C# and just press Ok!
         </p>
-        <img class="qimg" src="pictures/consoleProject.png">
+        <img class="qimg" src="pictures/consoleProject.png" alt="New Project page for visual studio">
         <p>
             This is what the default project will look like! We will go over all the parts of a simple program! Don't worry about stuff
             like Framework version 4.7! We will go over all this stuff in other tutorials! Right now are just working on
             the basics!
         </p>
-        <img class="qimg" src="pictures/main.png">
+        <img class="qimg" src="pictures/main.png" alt="An empty visual studio program">
         <p>
-            
+
         </p>
-        <img class="qimg" src="pictures/top.png">
-        <img class="qimg" src="pictures/middle.png">
-        <img class="qimg" src="pictures/bottom.png">
+        <img class="qimg" src="pictures/top.png" alt="images of the source code, if img not available look at link below">
+        <img class="qimg" src="pictures/middle.png" alt="images of the source code, if img not available look at link below">
+        <img class="qimg" src="pictures/bottom.png" alt="images of the source code, if img not available look at link below">
         <p>
             <a href="https://pastebin.com/UvZksiBe">All the code together is available here!</a>
         </p>
