--- a/Project2Quirk/csharpintro.html
+++ b/Project2Quirk/csharpintro.html
@@ -95,18 +95,23 @@
         <img class="qimg" src="pictures/consoleProject.png" alt="New Project page for visual studio">
         <p>
             This is what the default project will look like! We will go over all the parts of a simple program! Don't worry about stuff
-            like Framework version 4.7! We will go over all this stuff in other tutorials! Right now are just working on
+            like Framework version 4.7! We will go over all this code in other tutorials! Right now are just working on
             the basics!
         </p>
         <img class="qimg" src="pictures/main.png" alt="An empty visual studio program">
         <p>
-
+            This is our first example project, don't worry if it looks huge and scary. We will change that! This code is very simple and well commented
+            so you can take your time and look at it in detail. This code uses some functions, the Random class object and some loops, and outputs to the console.
+            If you run this code by pressing the green arrow at the top in visual. The program will run and ask you for input to play a guessing game!  
         </p>
         <img class="qimg" src="pictures/top.png" alt="images of the source code, if img not available look at link below">
         <img class="qimg" src="pictures/middle.png" alt="images of the source code, if img not available look at link below">
         <img class="qimg" src="pictures/bottom.png" alt="images of the source code, if img not available look at link below">
         <p>
             <a href="https://pastebin.com/UvZksiBe">All the code together is available here!</a>
+        </p>
+        <p>
+            If you make it this far, Congrats! You've completed the first tutorial.
         </p>
     </main>
     <footer>
