--- a/Project2Quirk/index.html
+++ b/Project2Quirk/index.html
@@ -74,6 +74,27 @@
         <p>
             This is the main page for the website. I will update and post tutorial links here that you can visit.
         </p>
+        <dl>
+            <dt>
+                <a href="csharpintro.html">
+                     C# Series
+                </a>
+            </dt>
+            <dd>
+                This section will teach all about C# "See-Sharp" and the dotnet framework. This language is very comprehensive and contains many features.
+                You can do amazing things with C#. It's also a very easy to get acquainted with.
+            </dd>
+            <dt>
+                <a href="monogame.html">
+                     Monogame Series
+                </a>
+            </dt>
+            <dd>
+                This series builds upon the C# series. Once you learn and understand C# and want to make some awesome games! You can learn how to right here!
+                Using monogame let's you access graphic code and create awesome games! This series will teach all about how game development works and how you
+                can easily create your own stuff!
+            </dd>
+        </dl>
     </main>
     <footer>
         <small>
