--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -44,10 +44,10 @@
         <div class="qheaderbox">
             <img class="qicon" src="QIcon.png">
             <h1>
-                Welcome To QCoding!
+                Monogame Tutorial
             </h1>
             <h3>
-                My place for coding tutorials!
+                First section of the Monogame Series
             </h3>
         </div>
     </header>
@@ -71,11 +71,29 @@
         </ul>
     </nav>
     <main class="qcontent qborder">
-        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
-        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
-        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
-        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
-        <br>
+        <p>
+            This tutorial will cover how to make a window in monogame! There is tons of ways to do things in monogame, but I will show
+            you how I do stuff my way with it. Monogame is a library that lets you draw images to the screen using an easy
+            API (Application Programming Interface) to build games quickly! This first part of the series will show you how
+            to open a new window and draw some sprites to the screen. There is a lot go over in this secion, so bear with
+            me!
+        </p>
+        <p>
+            The first thing we need to do after you install visual studio <a href="csharpintro.html"> 
+                (You can learn more about it here) </a> You will to download the monogame SDK (Software Development Kit).
+            Once you do that you can create a new monogame project inside of visual studio.
+        </p>
+        <img class="qimg" src="pictures/monogameBegin.png" alt="Monogame Website">
+        <p>
+            Once you install this package, you will have access to the latest version of monogame. This series uses version 3.6, so just
+            beware of that future versions may change how code works. Just like how you would setup a new C# console application.
+            This time select monogame and choose Monogame Windows Project. This will create a basic template game with all
+            the things that will help us create a game.
+        </p>
+        <img class="qimg" src="pictures/monoProject.png" alt="Monogame new project page">
+        <p>
+            
+        </p>
     </main>
     <footer>
         <small>
