--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -63,9 +63,6 @@
                 <a href="monogame.html">Monogame</a>
             </li>
             <li>
-                <a href="gamedesign.html">Game Design</a>
-            </li>
-            <li>
                 <a href="about.html">About Us</a>
             </li>
         </ul>
@@ -92,7 +89,38 @@
         </p>
         <img class="qimg" src="pictures/monoProject.png" alt="Monogame new project page">
         <p>
-            
+            Now that we have the basic template open! We can now add some code to it to start creating a small example game!
+        </p>
+        <img class="qimg" src="pictures/monoStart.png" alt="Monogame new project start class example">
+        <p>
+            First we have to create a new class, called Sprite. This class will contain all the information for sprites to render them
+            to the screen. We will be using a few namespace provided by the library.
+        </p>
+        <img class="qimg" src="pictures/spriteClass.png" alt="sprite class example source code">
+        <p>
+            I removed all the code that is not required in this tutorial just for the sake of ease. But the code will be used much later
+            on and is very important. Right now we want to add some content to our game using the sprite class that we just
+            created! In visual studio there is a file in the solution explorer called "Content.mgcb" We will be using this
+            file and opening it. This will open up the content pipeline that monogame installs. You can use this tool to
+            import images and sound effects into your code! Then all you do is drag the file you want in your game to the
+            pipeline tool and click ok! Then press f6 to build this code and it will distribute it to the output executable
+            for runtime!
+        </p>
+        <img class="qimg" src="pictures/contentFile.png" alt="content pipeline in visual">
+        <img class="qimg" src="pictures/content.png" alt="content pipeline tool">
+        <p>
+            Here is all the code you need to open a window and render an image the screen. We create a new Sprite class in Game1 and
+            then create instance of it in loadContent. Then we load the texture from Content.Load method, you give it the
+            of the image you selected. Then in the draw method in the code you can use the sprite.Draw method to draw the
+            image to the screen. As you might have noticed that the image is was to big for it to be seen correctly (unless you used a really small image)
+            Then you will need to scale is down using the sprite.Scale variables that we created earlier! 
+        </p>
+        <img class="qimg" src="pictures/catCode.png" alt="content pipeline in visual">
+        <p>
+            And Congrats! This is the end of this tutorial! It was a basic one just to learn about monogame! There will be future tutorials on how to do more advanced stuff beyond this!
+            But that is out of the scope for right now!<br>
+            <a href="https://pastebin.com/SaRhd2f8"> Code for the main class </a> <br>
+            <a href="https://pastebin.com/qdCUrntW"> Code for the sprite class </a>
         </p>
     </main>
     <footer>
