--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -60,7 +60,7 @@
                 <a href="csharpintro.html">C# Intro</a>
             </li>
             <li>
-                <a href="monogame.html">Monogame</a>
+                <a href="Monogame.html">Monogame</a>
             </li>
             <li>
                 <a href="about.html">About Us</a>
@@ -69,22 +69,22 @@
     </nav>
     <main class="qcontent qborder">
         <p>
-            This tutorial will cover how to make a window in monogame! There is tons of ways to do things in monogame, but I will show
+            This tutorial will cover how to make a window in Monogame! There is tons of ways to do things in Monogame, but I will show
             you how I do stuff my way with it. Monogame is a library that lets you draw images to the screen using an easy
             API (Application Programming Interface) to build games quickly! This first part of the series will show you how
-            to open a new window and draw some sprites to the screen. There is a lot go over in this secion, so bear with
+            to open a new window and draw some sprites to the screen. There is a lot go over in this section, so bear with
             me!
         </p>
         <p>
             The first thing we need to do after you install visual studio <a href="csharpintro.html"> 
-                (You can learn more about it here) </a> You will to download the monogame SDK (Software Development Kit).
-            Once you do that you can create a new monogame project inside of visual studio.
+                (You can learn more about it here) </a> You will to download the Monogame SDK (Software Development Kit).
+            Once you do that you can create a new Monogame project inside of visual studio.
         </p>
-        <img class="qimg" src="pictures/monogameBegin.png" alt="Monogame Website">
+        <img class="qimg" src="pictures/MonogameBegin.png" alt="Monogame Website">
         <p>
-            Once you install this package, you will have access to the latest version of monogame. This series uses version 3.6, so just
+            Once you install this package, you will have access to the latest version of Monogame. This series uses version 3.6, so just
             beware of that future versions may change how code works. Just like how you would setup a new C# console application.
-            This time select monogame and choose Monogame Windows Project. This will create a basic template game with all
+            This time select Monogame and choose Monogame Windows Project. This will create a basic template game with all
             the things that will help us create a game.
         </p>
         <img class="qimg" src="pictures/monoProject.png" alt="Monogame new project page">
@@ -101,7 +101,7 @@
             I removed all the code that is not required in this tutorial just for the sake of ease. But the code will be used much later
             on and is very important. Right now we want to add some content to our game using the sprite class that we just
             created! In visual studio there is a file in the solution explorer called "Content.mgcb" We will be using this
-            file and opening it. This will open up the content pipeline that monogame installs. You can use this tool to
+            file and opening it. This will open up the content pipeline that Monogame installs. You can use this tool to
             import images and sound effects into your code! Then all you do is drag the file you want in your game to the
             pipeline tool and click ok! Then press f6 to build this code and it will distribute it to the output executable
             for runtime!
@@ -117,7 +117,7 @@
         </p>
         <img class="qimg" src="pictures/catCode.png" alt="content pipeline in visual">
         <p>
-            And Congrats! This is the end of this tutorial! It was a basic one just to learn about monogame! There will be future tutorials on how to do more advanced stuff beyond this!
+            And Congrats! This is the end of this tutorial! It was a basic one just to learn about Monogame! There will be future tutorials on how to do more advanced stuff beyond this!
             But that is out of the scope for right now!<br>
             <a href="https://pastebin.com/SaRhd2f8"> Code for the main class </a> <br>
             <a href="https://pastebin.com/qdCUrntW"> Code for the sprite class </a>
