--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -80,7 +80,7 @@
                 (You can learn more about it here) </a> You will to download the Monogame SDK (Software Development Kit).
             Once you do that you can create a new Monogame project inside of visual studio.
         </p>
-        <img class="qimg" src="pictures/MonogameBegin.png" alt="Monogame Website">
+        <img class="qimg" src="pictures/monogameBegin.png" alt="Monogame Website">
         <p>
             Once you install this package, you will have access to the latest version of Monogame. This series uses version 3.6, so just
             beware of that future versions may change how code works. Just like how you would setup a new C# console application.
@@ -89,7 +89,7 @@
         </p>
         <img class="qimg" src="pictures/monoProject.png" alt="Monogame new project page">
         <p>
-            Now that we have the basic template open! We can now add some code to it to start creating a small example game!
+            Now that we have the basic template open, we can now add some code to it to start creating a small example game!
         </p>
         <img class="qimg" src="pictures/monoStart.png" alt="Monogame new project start class example">
         <p>
