--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -93,12 +93,12 @@
         </p>
         <img class="qimg" src="pictures/monoStart.png" alt="Monogame new project start class example">
         <p>
-            First we have to create a new class, called Sprite. This class will contain all the information for sprites to render them
+            First we have to create a new class called Sprite. This class will contain all the information for sprites to render them
             to the screen. We will be using a few namespace provided by the library.
         </p>
         <img class="qimg" src="pictures/spriteClass.png" alt="sprite class example source code">
         <p>
-            I removed all the code that is not required in this tutorial just for the sake of ease. But the code will be used much later
+            I removed all the code that is not required in this tutorial just for the time being. But the code will be used much later
             on and is very important. Right now we want to add some content to our game using the sprite class that we just
             created! In visual studio there is a file in the solution explorer called "Content.mgcb" We will be using this
             file and opening it. This will open up the content pipeline that Monogame installs. You can use this tool to
@@ -117,7 +117,7 @@
         </p>
         <img class="qimg" src="pictures/catCode.png" alt="content pipeline in visual">
         <p>
-            And Congrats! This is the end of this tutorial! It was a basic one just to learn about Monogame! There will be future tutorials on how to do more advanced stuff beyond this!
+            And Congrats! This is the end of this tutorial! It was just a basic one just to learn about Monogame! There will be future tutorials on how to do more advanced stuff beyond this!
             But that is out of the scope for right now!<br>
             <a href="https://pastebin.com/SaRhd2f8"> Code for the main class </a> <br>
             <a href="https://pastebin.com/qdCUrntW"> Code for the sprite class </a>
