--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -99,7 +99,7 @@
         <img class="qimg" src="pictures/spriteClass.png" alt="sprite class example source code">
         <p>
             I removed all the code that is not required in this tutorial just for the time being. But the code will be used much later
-            on and is very important. Right now we want to add some content to our game using the sprite class that we just
+            on and is very important. Right now we want to add some content to our game using the Sprite class that we just
             created! In visual studio there is a file in the solution explorer called "Content.mgcb" We will be using this
             file and opening it. This will open up the content pipeline that Monogame installs. You can use this tool to
             import images and sound effects into your code! Then all you do is drag the file you want in your game to the
