--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -110,15 +110,16 @@
         <img class="qimg" src="pictures/content.png" alt="content pipeline tool">
         <p>
             Here is all the code you need to open a window and render an image the screen. We create a new Sprite class in Game1 and
-            then create instance of it in loadContent. Then we load the texture from Content.Load method, you give it the
-            of the image you selected. Then in the draw method in the code you can use the sprite.Draw method to draw the
-            image to the screen. As you might have noticed that the image is was to big for it to be seen correctly (unless you used a really small image)
-            Then you will need to scale is down using the sprite.Scale variables that we created earlier! 
+            then create an instance of it in LoadContent. Then we load the texture from Content.Load method, you give it
+            the of the image you selected. Then in the draw method in the code you can use the sprite.Draw method to draw
+            the image to the screen. As you might have noticed that the image is was to big for it to be seen correctly (unless
+            you used a really small image) Then you will need to scale is down using the sprite.Scale variables that we created
+            earlier!
         </p>
         <img class="qimg" src="pictures/catCode.png" alt="content pipeline in visual">
         <p>
-            And Congrats! This is the end of this tutorial! It was just a basic one just to learn about Monogame! There will be future tutorials on how to do more advanced stuff beyond this!
-            But that is out of the scope for right now!<br>
+            And congrats! This is the end of this tutorial! It was just a basic one just to learn about Monogame! There will be future
+            tutorials on how to do more advanced stuff beyond this! But that is out of the scope for right now!<br>
             <a href="https://pastebin.com/SaRhd2f8"> Code for the main class </a> <br>
             <a href="https://pastebin.com/qdCUrntW"> Code for the sprite class </a>
         </p>
