--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -118,8 +118,8 @@
         </p>
         <img class="qimg" src="pictures/catCode.png" alt="content pipeline in visual">
         <p>
-            And congrats! This is the end of this tutorial! It was just a basic one just to learn about Monogame! There will be future
-            tutorials on how to do more advanced stuff beyond this! But that is out of the scope for right now!<br>
+            And congrats! This is the end of this tutorial. It was just a basic one just to learn about Monogame. There will be future
+            tutorials on how to do more advanced stuff beyond this, but that is out of the scope for right now.<br>
             <a href="https://pastebin.com/SaRhd2f8"> Code for the main class </a> <br>
             <a href="https://pastebin.com/qdCUrntW"> Code for the sprite class </a>
         </p>
