--- a/Project2Quirk/csharpintro.html
+++ b/Project2Quirk/csharpintro.html
@@ -69,9 +69,9 @@
     </nav>
     <main class="qcontent qborder">
         <p>
-            C# is a great language to learn! We will start of this tutorial series small, but build up into many cool topics! This series
+            C# is a great language to learn. We will start of this tutorial series small, but build up into many cool topics. This series
             will help you setup and <a href="https://www.visualstudio.com/thank-you-downloading-visual-studio/?sku=Community&rel=15">
-            install visual studio 2017</a>, and create a small basic game!
+            install visual studio 2017</a>, and create a small basic game.
         </p>
         <img class="qimg" src="pictures/visualstudio.png" alt="Picture of visul studio 2017 when opened">
         <p>
