--- a/Project2Quirk/about.html
+++ b/Project2Quirk/about.html
@@ -33,7 +33,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-- My stuff -->
     <title>
-        QCoding :: MainPage
+        QCoding :: About Us
     </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="qcodingmain.css">
@@ -44,10 +44,10 @@
         <div class="qheaderbox">
             <img class="qicon" src="QIcon.png">
             <h1>
-                Welcome To QCoding!
+                About Us
             </h1>
             <h3>
-                My place for coding tutorials!
+                Contact us for questions
             </h3>
         </div>
     </header>
@@ -68,11 +68,23 @@
         </ul>
     </nav>
     <main class="qcontent qborder">
-        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
-        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
-        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
-        <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br>        Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content! <br> Content!
-        <br>
+        <p>
+            Thanks for comming to this website to learn! We made it as simple as we could to help and teach new programmers learn. The
+            site was designed for simplicity and easy readability. We hope that your experience here is great, and that you
+            will come back to learn more here when there is more content. There will be more in the future, all you have
+            to do is subscribe to out news email client. Whenever we get new content here, we will email everyone that signs
+            up. So that you get the latest and greatest programming tutorials.
+        </p>
+        <form>
+            <fieldset>
+                <legend>Sign Up for programming Tips</legend>
+                <input type="text" name="firstname" placeholder="John" required="required">
+                <input type="text" name="lastname" placeholder="Doe" required="required">
+                <input type="email" name="email" placeholder="email@coolemail.com" required="required">
+                <input type="submit" name="submit" value="Submit">
+                <input type="reset" name="reset" value="Clear">
+            </fieldset>
+        </form>
     </main>
     <footer>
         <small>
