--- a/Project2Quirk/monogame.html
+++ b/Project2Quirk/monogame.html
@@ -33,7 +33,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-- My stuff -->
     <title>
-        QCoding :: MainPage
+        QCoding :: Monogame
     </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="qcodingmain.css">
